# esp-aws-iot-mqtt-config

./: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml  library.json
.github/workflows/: build.yml
example/: platformio.ini
example/main/: CMakeLists.txt  Kconfig.projbuild  aws_iot_mqtt_config_sample.c  lib_template_example_main.c
include/: aws_iot_mqtt_config.h
src/: aws_iot_mqtt_config.c  aws_iot_mqtt_root_ca.cpp  aws_iot_root_ca.c
